--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
+    "mongoose": "^5.6.4",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
